# OACToFabric

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  DEV_PLAN.md  ESSBASE_MIGRATION_PLAYBOOK.md  ESSBASE_TO_FABRIC_MIGRATION_PROPOSAL.md  MIGRATION_PLAYBOOK.md  PROJECT_PLAN.md  README.md  SMART_VIEW_TO_EXCEL_MIGRATION.md  pyproject.toml
.github/: agent-instructions.md  copilot-instructions.md
config/: dev.toml  migration.toml  prod.toml
dashboard/: index.html  package-lock.json  package.json  tsconfig.json
docs/: AGENTS.md  ARCHITECTURE.md  DEPLOYMENT_GUIDE.md  FAQ.md  FULL_GAP_ANALYSIS.md  GAP_ANALYSIS.md  KNOWN_LIMITATIONS.md  MAPPING_REFERENCE.md  MIGRATION_MATRIX.html  PHASE77_MVP_SCOPE.md  PHASE84_MVP_SCOPE.md  ROADMAP_EXECUTION_BOARD.md  ROADMAP_NEXT.md  oac-api-notes.md  security.md
examples/: README.md  essbase_migration_example.py  full_migration_example.py  validate_samples.py
infra/: main.bicep
output/: OAC_to_Fabric_Architecture.pptx  OAC_to_Fabric_Business_Deck.pptx  OAC_to_Fabric_Equivalence.pptx  OAC_to_Fabric_M365_Integration.pptx  OAC_to_Fabric_OnePager.pptx  OAC_to_Fabric_Services.pptx
scripts/: _check_cal.py  _check_empty.py  _check_pages.py  _check_pbi_report.py  _diag_expr.py  _diag_visuals.py  _fix_pbir.py  _m_diag.py  _name_conflicts.py  _pbir_diag.py  audit_tmdl.py  deploy.py  diagnose_m.py  essbase_html_report.py  generate_architecture_slide.py  generate_business_deck.py  generate_equivalence_slide.py  generate_m365_slide.py  generate_oneslider.py  generate_services_slide.py  html_report_generator.py  run_pilot.py  (+6 more)
(+1189 files in other folders)
